# $Id$
2007-11-29 Benoit Grégoire  <bock@step.polymtl.ca>
	* signup.tpl, lost_username.tpl, lost_password.tpl, resend_validation.tpl:  Move the error div near the button for coherence with the login page (and for the same reason).  In fact it was worse than the login page used to be:  the error message during signup could appear completely below the page for a user with a low resolution screeen (or big font), giving the form the apereance of doing absolutely nothing (it stumped even me as I was trying to help a user).

2007-11-23 Benoit Grégoire  <bock@step.polymtl.ca>
	* UIUserList.php: Don't force it to be persistent, it prevented users from deleting it.

2007-11-15 Benoit Grégoire  <bock@step.polymtl.ca>
	* Menu.php: Make individual submenus, and individual menu items CSS-targetable.

2007-11-05 Benoit Grégoire  <bock@step.polymtl.ca>
	* Commit most of Robin Jones install script improvements.
		
2007-10-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* Major security fix:  Fix the authenticator for a security breach where a user could get Internet access using an empty username.  LocalUser and LDAP were definitely vulnerable, RADIUS may have been.
	
2007-10-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Remove Array type hinting in Security.php. It's not supported in PHP < 5.1.  Fixes  #393

2007-10-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Commited slightly modified patch by Robin Jones to implement #184

2007-09-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Menu.php:  Fix a number of improper call time pass by reference

2007-09-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* locale/gensmarty.pl:  Heads up translators:  There was a bug in the regex; about 20 strings in the smarty templates were missed.
	* Updated french translation

2007-09-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Hopefully fix #384, and remove pages unlikely to be implemented for 1.0
	
2007-09-18 Benoit Grégoire  <bock@step.polymtl.ca>